--- a/net/net/SEALNet.targets
+++ b/net/net/SEALNet.targets
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- Copyright (c) Microsoft Corporation. All rights reserved.
+     Licensed under the MIT license. -->
+
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <NativeLibs Include="$(MSBuildThisFileDirectory)$(Platform)\SEALdll.dll" />
