--- a/net/net/SEALNet.nuspec
+++ b/net/net/SEALNet.nuspec
@@ -19,7 +19,7 @@
     <tags>c# crypto cryptography</tags>
   </metadata>
   <files>
-    <file src="..\bin\x64\$Configuration$\SEALdll.dll" target="build\x64\SEALdll.dll" />
+    <file src="..\..\bin\x64\$Configuration$\SEALdll.dll" target="build\x64\SEALdll.dll" />
     <file src="SEALNet.targets" target="build\Microsoft.Research.SEALNet.targets" />
     <file src="bin\$Configuration$\netstandard2.0\SEALNet.*" target="lib\netstandard2.0\" exclude="**\*.pdb" />
   </files>
