Fix test for __builtin_clzll in CMakeLists.txt
The test was broken and would never succeed.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -177,7 +177,7 @@ if(SEAL_USE_INTRIN)
 		if(SEAL_USE___BUILTIN_CLZLL)
 			check_cxx_source_runs("
 				int main() {
-					volatile auto = __builtin_clzll(0);
+					volatile auto res = __builtin_clzll(0);
 					return 0;
 				}"
 				USE_BUILTIN_CLZLL
