--- a/net/dll/SEALdll.vcxproj
+++ b/net/dll/SEALdll.vcxproj
@@ -157,55 +157,55 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="seal\contextdata.h" />
-    <ClInclude Include="seal\batchencoder.h" />
-    <ClInclude Include="seal\biguint.h" />
-    <ClInclude Include="seal\ciphertext.h" />
-    <ClInclude Include="seal\ckksencoder.h" />
-    <ClInclude Include="seal\decryptor.h" />
-    <ClInclude Include="seal\defaultparams.h" />
+    <ClInclude Include="seal\contextdata_wrapper.h" />
+    <ClInclude Include="seal\batchencoder_wrapper.h" />
+    <ClInclude Include="seal\biguint_wrapper.h" />
+    <ClInclude Include="seal\ciphertext_wrapper.h" />
+    <ClInclude Include="seal\ckksencoder_wrapper.h" />
+    <ClInclude Include="seal\decryptor_wrapper.h" />
+    <ClInclude Include="seal\defaultparams_wrapper.h" />
     <ClInclude Include="seal\defines.h" />
-    <ClInclude Include="seal\encryptionparameterqualifiers.h" />
-    <ClInclude Include="seal\encryptionparameters.h" />
-    <ClInclude Include="seal\encryptor.h" />
-    <ClInclude Include="seal\evaluator.h" />
-    <ClInclude Include="seal\galoiskeys.h" />
-    <ClInclude Include="seal\keygenerator.h" />
-    <ClInclude Include="seal\memorymanager.h" />
-    <ClInclude Include="seal\memorypoolhandle.h" />
-    <ClInclude Include="seal\plaintext.h" />
-    <ClInclude Include="seal\publickey.h" />
-    <ClInclude Include="seal\relinkeys.h" />
-    <ClInclude Include="seal\sealcontext.h" />
-    <ClInclude Include="seal\secretkey.h" />
-    <ClInclude Include="seal\smallmodulus.h" />
+    <ClInclude Include="seal\encryptionparameterqualifiers_wrapper.h" />
+    <ClInclude Include="seal\encryptionparameters_wrapper.h" />
+    <ClInclude Include="seal\encryptor_wrapper.h" />
+    <ClInclude Include="seal\evaluator_wrapper.h" />
+    <ClInclude Include="seal\galoiskeys_wrapper.h" />
+    <ClInclude Include="seal\keygenerator_wrapper.h" />
+    <ClInclude Include="seal\memorymanager_wrapper.h" />
+    <ClInclude Include="seal\memorypoolhandle_wrapper.h" />
+    <ClInclude Include="seal\plaintext_wrapper.h" />
+    <ClInclude Include="seal\publickey_wrapper.h" />
+    <ClInclude Include="seal\relinkeys_wrapper.h" />
+    <ClInclude Include="seal\sealcontext_wrapper.h" />
+    <ClInclude Include="seal\secretkey_wrapper.h" />
+    <ClInclude Include="seal\smallmodulus_wrapper.h" />
     <ClInclude Include="seal\stdafx.h" />
     <ClInclude Include="seal\targetver.h" />
     <ClInclude Include="seal\utilities.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="seal\contextdata.cpp" />
-    <ClCompile Include="seal\batchencoder.cpp" />
-    <ClCompile Include="seal\ciphertext.cpp" />
-    <ClCompile Include="seal\ckksencoder.cpp" />
-    <ClCompile Include="seal\decryptor.cpp" />
-    <ClCompile Include="seal\defaultparams.cpp" />
+    <ClCompile Include="seal\contextdata_wrapper.cpp" />
+    <ClCompile Include="seal\batchencoder_wrapper.cpp" />
+    <ClCompile Include="seal\ciphertext_wrapper.cpp" />
+    <ClCompile Include="seal\ckksencoder_wrapper.cpp" />
+    <ClCompile Include="seal\decryptor_wrapper.cpp" />
+    <ClCompile Include="seal\defaultparams_wrapper.cpp" />
     <ClCompile Include="seal\dllmain.cpp" />
-    <ClCompile Include="seal\biguint.cpp" />
-    <ClCompile Include="seal\encryptionparameterqualifiers.cpp" />
-    <ClCompile Include="seal\encryptor.cpp" />
-    <ClCompile Include="seal\evaluator.cpp" />
-    <ClCompile Include="seal\galoiskeys.cpp" />
-    <ClCompile Include="seal\keygenerator.cpp" />
-    <ClCompile Include="seal\memorymanager.cpp" />
-    <ClCompile Include="seal\memorypoolhandle.cpp" />
-    <ClCompile Include="seal\plaintext.cpp" />
-    <ClCompile Include="seal\publickey.cpp" />
-    <ClCompile Include="seal\relinkeys.cpp" />
-    <ClCompile Include="seal\sealcontext.cpp" />
-    <ClCompile Include="seal\secretkey.cpp" />
-    <ClCompile Include="seal\smallmodulus.cpp" />
-    <ClCompile Include="seal\encryptionparameters.cpp" />
+    <ClCompile Include="seal\biguint_wrapper.cpp" />
+    <ClCompile Include="seal\encryptionparameterqualifiers_wrapper.cpp" />
+    <ClCompile Include="seal\encryptor_wrapper.cpp" />
+    <ClCompile Include="seal\evaluator_wrapper.cpp" />
+    <ClCompile Include="seal\galoiskeys_wrapper.cpp" />
+    <ClCompile Include="seal\keygenerator_wrapper.cpp" />
+    <ClCompile Include="seal\memorymanager_wrapper.cpp" />
+    <ClCompile Include="seal\memorypoolhandle_wrapper.cpp" />
+    <ClCompile Include="seal\plaintext_wrapper.cpp" />
+    <ClCompile Include="seal\publickey_wrapper.cpp" />
+    <ClCompile Include="seal\relinkeys_wrapper.cpp" />
+    <ClCompile Include="seal\sealcontext_wrapper.cpp" />
+    <ClCompile Include="seal\secretkey_wrapper.cpp" />
+    <ClCompile Include="seal\smallmodulus_wrapper.cpp" />
+    <ClCompile Include="seal\encryptionparameters_wrapper.cpp" />
     <ClCompile Include="seal\utilities.cpp" />
     <ClCompile Include="seal\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
