--- a/net/net/SEALNet.nuspec
+++ b/net/net/SEALNet.nuspec
@@ -22,5 +22,6 @@
     <file src="..\..\bin\x64\$Configuration$\SEALdll.dll" target="build\x64\SEALdll.dll" />
     <file src="SEALNet.targets" target="build\Microsoft.Research.SEALNet.targets" />
     <file src="bin\$Configuration$\netstandard2.0\SEALNet.*" target="lib\netstandard2.0\" exclude="**\*.pdb" />
+    <file src="..\..\LICENSE" target="LICENSE" />
   </files>
 </package>
