Fix all XML comments and generate Xml file for intellisense

--- a/net/net/SEALNet.csproj
+++ b/net/net/SEALNet.csproj
@@ -7,4 +7,7 @@
     <Description>.Net wrapper for SEAL library</Description>
     <Copyright>Microsoft Corporation 2018</Copyright>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin/Release/SEALNet.xml</DocumentationFile>
+  </PropertyGroup>
 </Project>
