--- a/net/dll/CMakeLists.txt
+++ b/net/dll/CMakeLists.txt
@@ -5,8 +5,8 @@ cmake_minimum_required(VERSION 3.10)
 
 project(SEALExamples VERSION 3.1.0 LANGUAGES CXX)
 
-# Executable will be in ../lib
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../../lib)
+# Library will be in ../../lib
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../../lib)
 
 # Create library but add no source files yet
 add_library(sealdll SHARED "")
@@ -16,6 +16,9 @@ find_package(SEAL 3.1.0 EXACT REQUIRED)
 
 # Link SEAL
 target_link_libraries(sealdll SEAL::seal)
+
+# Shared library needs to be relocatable
+#target_compile_options(sealdll PUBLIC "-fPIC")
 
 # Add source files to library
 add_subdirectory(seal)
