--- a/tests/seal/CMakeLists.txt
+++ b/tests/seal/CMakeLists.txt
@@ -8,7 +8,7 @@ target_sources(sealtest
         ${CMAKE_CURRENT_LIST_DIR}/ciphertext.cpp
         ${CMAKE_CURRENT_LIST_DIR}/ckks.cpp
         ${CMAKE_CURRENT_LIST_DIR}/context.cpp
-        ${CMAKE_CURRENT_LIST_DIR}/encoder.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/intencoder.cpp
         ${CMAKE_CURRENT_LIST_DIR}/encryptionparams.cpp
         ${CMAKE_CURRENT_LIST_DIR}/encryptor.cpp
         ${CMAKE_CURRENT_LIST_DIR}/evaluator.cpp
