--- a/tests/SEALTest.vcxproj
+++ b/tests/SEALTest.vcxproj
@@ -54,6 +54,7 @@
     <ClCompile Include="seal\relinkeys.cpp" />
     <ClCompile Include="seal\secretkey.cpp" />
     <ClCompile Include="seal\smallmodulus.cpp" />
+    <ClCompile Include="seal\testrunner.cpp" />
     <ClCompile Include="seal\util\clipnormal.cpp" />
     <ClCompile Include="seal\util\common.cpp" />
     <ClCompile Include="seal\util\hash.cpp" />
@@ -75,6 +76,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+    <Text Include="seal\CMakeLists.txt" />
+    <Text Include="seal\util\CMakeLists.txt" />
   </ItemGroup>
   <ItemDefinitionGroup />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
