--- a/net/dll/CMakeLists.txt
+++ b/net/dll/CMakeLists.txt
@@ -11,19 +11,20 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../../lib)
 # Create library but add no source files yet
 add_library(sealdll SHARED "")
 
-# Import SEAL
+# Import Microsoft SEAL
 find_package(SEAL 3.1.0 EXACT REQUIRED)
 
-# Link SEAL
-target_link_libraries(sealdll SEAL::seal)
+# Check that Microsoft SEAL is build as position-independent code
+if (SEAL_LIB_BUILD_TYPE STREQUAL "Static")
+    message(FATAL_ERROR "Microsoft SEAL is not built as position-independent code; please set SEAL_LIB_BUILD_TYPE to either \"Static_PIC\" or \"Shared\" and rebuild.")
+endif()
 
-# Turn on warnings
-target_compile_options(sealdll PUBLIC "-Wall" "-Wextra" "-Wconversion" "-Wshadow")
+# Link Microsoft SEAL
+target_link_libraries(sealdll SEAL::seal)
 
 # Add source files to library
 add_subdirectory(seal)
 
-# Install only the shared library. This library is not meant to be
-# used other than by SEALNet.
-install(TARGETS sealdll
-	LIBRARY DESTINATION lib)
+# Install only the shared library. This library is only meant to be
+# used by the SEALNet .NET library.
+install(TARGETS sealdll LIBRARY DESTINATION lib)
