--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,11 +10,11 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../bin)
 
 add_executable(sealtest seal/testrunner.cpp)
 
-# Import SEAL
+# Import Microsoft SEAL
 find_package(SEAL 3.1.0 EXACT REQUIRED)
 
 if(SEAL_ENFORCE_HE_STD_SECURITY)
-    message(FATAL_ERROR "SEAL is configured with SEAL_ENFORCE_HE_STD_SECURITY which is incompatible with unit tests")
+    message(FATAL_ERROR "Microsoft SEAL is configured with SEAL_ENFORCE_HE_STD_SECURITY which is incompatible with unit tests")
 endif()
 
 # Import Google target_link_libraries
@@ -23,7 +23,7 @@ if(NOT GTEST)
     message(FATAL_ERROR "Failed to find Google Test library required for unit tests")
 endif()
 
-# Link SEAL
+# Link Microsoft SEAL
 target_link_libraries(sealtest SEAL::seal ${GTEST})
 
 # Add source files
